--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 	<script type="importmap">
 		{
 			"imports": {
-				"three": "./three.module.min.js",
+				"three": "./three.module.js",
                 "three/addons/": "https://unpkg.com/three@0.157.0/examples/jsm/"
 			}
 		}
